Fix collapsed menu icons - LCARS theme

--- a/style/themes/lcars.css
+++ b/style/themes/lcars.css
@@ -1155,7 +1155,7 @@ footer a:focus {
   box-shadow: none;
 }
 
-.sidebar-collapse .sidebar-menu svg {
+.sidebar-collapse .sidebar-menu i {
   display: block;
 }
 
